Fixed the grid so alignwide outside a container still matches perfectly
useful when pulling a block or element outside of .container-content or .container

--- a/src/sass/core/_grid-layout.scss
+++ b/src/sass/core/_grid-layout.scss
@@ -72,6 +72,7 @@ $media-list: ('container': 1200px, 'medium': 768px, 'small': 576px, 'large': 103
   }
 
   > .alignwide {
+    width: 100%;
 	max-width: calc(var(--container) - (var(--container-padding) * 2));
 
   }
@@ -87,6 +88,7 @@ $media-list: ('container': 1200px, 'medium': 768px, 'small': 576px, 'large': 103
   padding-right: 0;
 
   > .alignwide {
+    width: 100%;
 	max-width: calc(100% - (var(--container-padding) * 2))
   }
 }
@@ -109,13 +111,16 @@ $media-list: ('container': 1200px, 'medium': 768px, 'small': 576px, 'large': 103
 /*--------------------------------------------------------------
 # WP Align Wide Matches the size of a .container
 --------------------------------------------------------------*/
-
+//alignwide normally cannot be used outside a container. it does not have padding
+//this fixes it and makes it so that it can be
 .alignwide {
-  width: 100%;
-  max-width: var(--container);
+  width: calc(100% - (var(--container-padding) * 2)); //always has paddings on side as if it was inside container
+  max-width: calc(var(--container) - (var(--container-padding) * 2)); //outside a container it still has the width as if it was inside one
   margin-left: auto;
   margin-right: auto;
 }
+
+
 
 /*--------------------------------------------------------------
 # CARD GRIDS
